--- a/app/src/main/res/layout/order_detail.xml
+++ b/app/src/main/res/layout/order_detail.xml
@@ -15,15 +15,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0" />
 
-    <ImageView
-        android:id="@+id/od_imageView1"
+    <ImageButton
+        android:id="@+id/od_imageButton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/back"
         android:layout_marginLeft="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@id/od_toolbar1"
         app:layout_constraintBottom_toBottomOf="@id/od_toolbar1"
-        app:srcCompat="@drawable/back" />
+        app:layout_constraintLeft_toLeftOf="@id/od_toolbar1"/>
 
     <TextView
         android:id="@+id/od_textView1"
@@ -121,7 +121,7 @@
         android:id="@+id/od_textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" / "
+        android:text=" : "
         android:textColor="@color/wine"
         android:textSize="20sp"
         android:fontFamily="@font/anodina"
