--- a/app/src/main/res/layout/order_list.xml
+++ b/app/src/main/res/layout/order_list.xml
@@ -15,15 +15,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0" />
 
-    <ImageView
-        android:id="@+id/ol_imageView1"
+    <ImageButton
+        android:id="@+id/ol_imageButton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/back"
         android:layout_marginLeft="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@id/ol_toolbar1"
         app:layout_constraintBottom_toBottomOf="@id/ol_toolbar1"
-        app:srcCompat="@drawable/back" />
+        app:layout_constraintLeft_toLeftOf="@id/ol_toolbar1"/>
 
     <TextView
         android:id="@+id/ol_textView1"
