--- a/app/src/main/res/layout/order_page.xml
+++ b/app/src/main/res/layout/order_page.xml
@@ -15,15 +15,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0" />
 
-    <ImageView
-        android:id="@+id/op_imageView1"
+    <ImageButton
+        android:id="@+id/op_imageButton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/back"
         android:layout_marginLeft="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@id/op_toolbar1"
         app:layout_constraintBottom_toBottomOf="@id/op_toolbar1"
-        app:srcCompat="@drawable/back" />
+        app:layout_constraintLeft_toLeftOf="@id/op_toolbar1"/>
 
     <TextView
         android:id="@+id/op_textView1"
@@ -85,7 +85,7 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         app:srcCompat="@drawable/chat"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="15dp"
         app:layout_constraintTop_toTopOf="@id/op_button1"
         app:layout_constraintBottom_toBottomOf="@id/op_button1"
         app:layout_constraintLeft_toLeftOf="@id/op_button1"/>
@@ -119,7 +119,7 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         app:srcCompat="@drawable/call"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="15dp"
         app:layout_constraintTop_toTopOf="@id/op_button2"
         app:layout_constraintBottom_toBottomOf="@id/op_button2"
         app:layout_constraintLeft_toLeftOf="@id/op_button2"/>
@@ -128,7 +128,7 @@
         android:id="@+id/op_textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chat"
+        android:text="Call"
         android:textColor="@color/wine"
         android:textSize="25sp"
         android:fontFamily="@font/anodina"
